Fix: revert back to h2 letter spacing of -0.05rem

--- a/scss/globals/_typography.scss
+++ b/scss/globals/_typography.scss
@@ -64,7 +64,7 @@ h2 {
 	font-size: 2.75rem;
 	margin-bottom: 2rem;
 	font-weight: 500;
-	letter-spacing: -0.05rem;
+	letter-spacing: $h2-spacing;
 }
 
 .projects__subtitle {
